# sbomtools

./: README.md  setup.cfg
.github/workflows/: runchecks.yml
sbomtools/: __init__.py  constants.py  cyclonedx.py  exceptions.py  grep.py  remove.py  sbomgrep.py  sbomls.py  sbomrm.py  sbomupdate.py  search.py  spdx.py  update.py
testfiles/: cyclone-dx-test.json  spdx-test.json
