[metadata]
name = sbomtools
version = 0.2.0
author = Eliot Lear
author_email = lear@cisco.com
description = SBOM tools
long_description = file:README.md
long_description_content_type= text/markdown
license = BSD 3-Clause License

[options]
packages = sbomtools
python_requires = >=3.9


[options.entry_points]
console_scripts =
   sbomgrep = sbomtools.sbomgrep:cli
   sbomupdate = sbomtools.sbomupdate:cli
   sbomrm = sbomtools.sbomrm:cli
