[metadata]
name = sbomtools
version = 0.3.2
author = Eliot Lear
author_email = lear@cisco.com
url = https://github.com/sbomtools/sbomtools
description = SBOM tools
long_description = file:README.md
long_description_content_type= text/markdown
license = BSD 3-Clause License

[options]
packages = sbomtools
python_requires = >=3.8


[options.entry_points]
console_scripts =
   sbomgrep = sbomtools.sbomgrep:cli
   sbomupdate = sbomtools.sbomupdate:cli
   sbomrm = sbomtools.sbomrm:cli
   sbomls= sbomtools.sbomls:cli